--- a/Changelog.txt
+++ b/Changelog.txt
@@ -462,3 +462,8 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.0.3 2,641,577 (20.05.2020) 02:03
 [*] Fixed an issue causing a lua error when previous saved vars didn't exist (e.g. new char or when they were deleted)
 [*] Fixed an issue where icons where missing in the buff panel for older fights
+
+1.0.4 
+[*] Fixed an issue where streaming the log to chat was not working.
+[*] Fixed an issue where a lua error would appear during fight calculation.
+
