--- a/Changelog.txt
+++ b/Changelog.txt
@@ -466,4 +466,5 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.0.4 
 [*] Fixed an issue where streaming the log to chat was not working.
 [*] Fixed an issue where a lua error would appear during fight calculation.
+[*] Removed preliminary code to handle penetration given by the new Piercing Spray set (vAS Bow). As this is a conditional resistance modifier it is more complicated to implement and will be added in a future patch.
 
