--- a/Changelog.txt
+++ b/Changelog.txt
@@ -478,3 +478,8 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.0.6 2.808.185 (11.06.2020) 18:36
 [*] Fixed an issue with russian fonts for real this time
+
+1.0.7 2.961.850 (24.08.2020) 10:11
+[*] API Bump to Stonethorn (100032)
+[*] Added tracking of the new Alkosh penetration debuff
+[*] Added tracking of Tremorscale penetration debuff
