--- a/Changelog.txt
+++ b/Changelog.txt
@@ -502,3 +502,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] In the log you can now see for casts when an input was registered, an early input automatically activated (from queue) and the cast actually fired. 
 [*] Added new buff values for Minor/Major Breach for penetration calculation in the new patch (Already works on PTS)
 [*] API Bump to Markath
+
+1.1.1 3.205.131 (20.10.2020) 23:48
+[*] Fixed an issue with Grim Focus and its morphs for the reworked skill timing and weaving stat
