--- a/Changelog.txt
+++ b/Changelog.txt
@@ -505,3 +505,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.1.1 3.205.131 (20.10.2020) 23:48
 [*] Fixed an issue with Grim Focus and its morphs for the reworked skill timing and weaving stat
+
+1.1.2 3.271.140 (04.11.2020) 20:53
+[*] Added Crystal Weapon and Breach/Fracture Poisons resistance debuffs to be recognized for penetration stat calculations
+[*] Fixed Minor/Major Breach not being considered as physical resistance debuff
