fix issue with shield damage being awarded twice, fix hits to shield, some adjustments to line display in graph

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -516,3 +516,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Fixed an issue that would prevent some preapplied buffs to be registered. (For example Minor Force when wearing Medusa or potions taken before combat start)
 [*] Added a workaround for Minor Magickasteal. Since the API currently reports the wrong source, it will always be shown as a buff added by a group member. 
 [*] Fixed an issue where some Blastbone casts were not registered.
+
+1.2.1
+[*] Reworked display of thin lines by using textures. This should result in more consistent display of line UI elements. 
+[*] Fixed an issue, where damage to shields was awarded twice for total DPS. 
