--- a/Changelog.txt
+++ b/Changelog.txt
@@ -523,3 +523,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.2.2 3.459.569 (25.12.2020) 21:54
 [*] Fixed some inconsistencies in shown DPS numbers. 
+
+1.2.3
+[*] Fixed an issue, where max/min hits weren't working. You can use recalculate fight via the option button (cogwheel icon) to fix it for saved fights. 
