--- a/Changelog.txt
+++ b/Changelog.txt
@@ -530,6 +530,12 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.2.4 3.491.297 (27.12.2020) 16:33 
 [*] Fixed an issue, where a lua error appeared when loading the fight list. 
 
-1.2.5  (27.12.2020) 21:22 
+1.2.5 3.498.767 (27.12.2020) 21:22 
 [*] Fixed an issue, where a lua error appeared during opening of the main report window, due to misformed saved variables introduced in an old version. 
 [*] Added an option to reset the settings to default in the addon settings menu.
+
+1.3.0
+[*] Added Skill Timings for the werewolf bar. You can toggle it on via a button on the top right of the skill analysis. The button will be hidden, when werewolf wasn't used.
+[*] Fixed an issue where Crystal Fragment Proc casts were not being tracked properly. 
+
+
