--- a/Changelog.txt
+++ b/Changelog.txt
@@ -543,7 +543,14 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Added support for CP 2.0. Parses done with CP 1.0 will be shown in the old style (but without tooltips). 
 [*] Updated the system to calculate effective Stat values. This is also done to allow future implementations of advanced stats, which are recorded already but not shown yet. 
 [*] Fixed some skill timing issues with vampire toggle.
+[*] API Bump to Flames of Ambition (100034)
 
 1.3.1 3.708.709 (07.03.2021) 14:47
 [*] Fixed a lua error which appeared for players using custom languages.
 [*] Fixed a lua error which appeared for tooltips of CP 1.0 stars.
+
+1.3.2 3.762.468 (09.03.2021) 23:55
+[*] Fixed a lua error which appeared when showing resources in the graph
+
+1.3.3 3.810.403 (13.03.2021) 01:22
+[*] Fixed an issue where too big weaving times were shown for channeled or casttime abilities which are faster than one second. (Thx to Liko for reporting this.)
