--- a/Changelog.txt
+++ b/Changelog.txt
@@ -569,3 +569,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.4.1 3.966.935 (18.04.2021) 00:08
 [*] Fixed inconsistent version numbers
+
+1.4.2 4.049.481 (09.05.2021) 13:39
+[*] Fixed an issue where penetration values on Trial dummy where incorrect, when using LUI extended (Thx to xfroggerx for reporting this)
