--- a/Changelog.txt
+++ b/Changelog.txt
@@ -602,3 +602,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.5.2 4.710.022 (19.01.2022) 13:36
 [*] Fixed an issue with a lua error introduced in last patch.
+
+1.5.3 4.832.505 (05.04.2022) 00:38
+[*] Added tracking of Major Brittle for Critical Damage Bonus.
