--- a/Changelog.txt
+++ b/Changelog.txt
@@ -618,3 +618,10 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.5.6 5.104.339 (19.07.2022) 00:03
 [*] Fixed a Lua error appearing on PTS
 [*] Fixed an issue where short cast time abilities showed wrong weaving statistics (Thanks SkinnyCheeks for the hint)
+
+1.5.7 5.189.049 (24.08.2022) 22:35
+[*] Added compatibility with Lost Depths (API 101035).
+[*] Updated Alkosh and Elemental Catalyst for the Trial Dummy (Thx @ToxicKitty135 for the hint)
+
+1.5.8 5.260.987 (15.09.2022) 23:08
+[*] Adjusted crusher value on target dummy to reflect the change in Update 35 (@thx zvavi for the hint)
