Update for API Version 101037 (some necessary UI adjustments)

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -634,3 +634,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.5.10 5.441.378 (19.12.2022) 22:10
 [*] Added special tracking for Z'en, to show achieved stacks in the buff panel. It uses the same tracking method as ExoYs ExoYs ProcSet Timer and TouchOfZen. Let me know if any source for Z'en is missing.
 [*] Added special tracking for the Spell/Weapon Damage modifying portion of Seething Fury. It is shown with a square version of the icon and named Seething Fury (Buff).
+
+1.5.11 5.568.953 (13.03.2023) 00:49
+[*] Update for Scribes of Fate (API 101037)
