--- a/Changelog.txt
+++ b/Changelog.txt
@@ -646,3 +646,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.5.14 5.738.783 (16.05.2023) 00:19
 [*] Added support for Force of Nature (by popular request). This includes adding tracking for all status effects. A dummy debuff with stacks will be shown, to show the combined uptime.
+
+1.5.15 5.868.987 (31.07.2023) 01:02
+[*] Added Runic Sunder to penetration ability tracking. That one somehow slipped through so far.
