--- a/Changelog.txt
+++ b/Changelog.txt
@@ -658,5 +658,5 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.5.17 6,239,963 (20.08.2024) 23:01
 [*] Fixed an issue where the live report window was movable when the lock options was enabled (Thx to Foozeyy for the report).
 
-1.5.18
-[*] Small fix to prevent a lua-error on resizing (Thx to zelenin for the report)
+1.5.18 6,340,650 (10.11.2024) 14:07
+[*] Fix to prevent a lua-error on opening or resizing the main report window (Thx to zelenin & NordPaladin for the reports)
