--- a/Changelog.txt
+++ b/Changelog.txt
@@ -660,3 +660,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.5.18 6,340,650 (10.11.2024) 14:07
 [*] Fix to prevent a lua-error on opening or resizing the main report window (Thx to zelenin & NordPaladin for the reports)
+
+1.5.19 6,340,650 (10.11.2024) 14:07
+[*] Fix to prevent the live report window from getting stuck in resize mode (Thx to @Keekalakookoo for the report)
