--- a/Changelog.txt
+++ b/Changelog.txt
@@ -675,3 +675,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 1.6.2 6,450,025 (06.02.2025) 21:50
 [*] Fixed incorrect version numbers (again)
+
+1.6.3  (07.02.2025) 21:50
+[*] Fixed reference to CMX before it was loaded, resulting in a lua error
