--- a/Changelog.txt
+++ b/Changelog.txt
@@ -713,3 +713,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 1.7.5 6,741,291 (15.05.2025) 21:26
 [*] Reworked fight data initialization once more. This should fix the error that occured when only the subaddon was activated.
 [*] Added a warning symbol to the buff panel when certain sigils are used.
+
+1.7.6
+[*] Changed manifest file extension to ".addon"
